--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "portforlio",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://coconautty.github.io/",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
