--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "normalize-scss": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1",
     "sass": "^1.81.0",
     "sass-migrator": "^2.2.1",
     "three": "^0.170.0"
@@ -31,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
+    "react-icons": "^5.3.0",
     "vite": "^5.4.10"
   }
 }
