--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
+    "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "normalize-scss": "^8.0.0",
     "react": "^18.3.1",
