--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
+    "react-scrollspy": "^3.4.3",
+    "react-scrollspy-navigation": "^2.0.6",
     "sass": "^1.81.0",
     "sass-migrator": "^2.2.1",
     "three": "^0.170.0",
