--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portforlio",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "homepage": "https://coconautty.github.io/",
